# vibe-kanban

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
assets/scripts/: toast-notification.ps1
crates/deployment/: Cargo.toml
crates/executors/: default_mcp.json
crates/local-deployment/: Cargo.toml
crates/local-relay/: Cargo.toml
crates/local-relay/src/: auth.rs  lib.rs  registry.rs  server.rs
crates/local-relay/src/routes/: connect.rs  mod.rs  proxy.rs
crates/local-relay/tests/: integration_test.rs
crates/server/: Cargo.toml
crates/services/: Cargo.toml
crates/ssh-tunnel/: Cargo.toml
crates/tauri-app/: Info.plist  tauri.conf.json
docs/: browser-testing.mdx  docs.json  getting-started.mdx  index.mdx  issue-management.mdx  responsible-disclosure.mdx  supported-coding-agents.mdx  troubleshooting.mdx
docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
docs/configuration-customisation/: agent-configurations.mdx  global-settings.mdx
docs/core-features/: completing-a-task.mdx  creating-projects.mdx  creating-tasks.mdx  monitoring-task-execution.mdx  subtasks.mdx  testing-your-application.mdx
docs/integrations/: azure-repos-integration.mdx  github-integration.mdx  vibe-kanban-mcp-server.mdx  (+2 more)
npx-cli/: README.md
plans/: 2026-04-19-p2p-remote-access-phase1.md  2026-04-19-p2p-remote-access-phase2.md  2026-04-19-self-hosted-remote-access-design.md  local-first-cleanup-implementation.md
scripts/: build-tauri-msi.js
shared/: types.ts
(+123 files in other folders)
