[package]
name = "local-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
relay-tunnel-core = { path = "../relay-tunnel-core" }
axum              = { workspace = true }
tokio             = { workspace = true }
tower-http        = { workspace = true }
tracing           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
anyhow            = { workspace = true }
dashmap           = "6"

[dev-dependencies]
reqwest = { workspace = true }
tokio   = { workspace = true }
